# multi-agent-template

./: .gitignore  LICENSE  MANIFEST.in  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: release.yml
docs/: getting-started.md
examples/: README.md
mab/: __init__.py  cli.py
scripts/: bootstrap.ps1  bootstrap.sh
{{cookiecutter.project_name}}/: .gitignore  CLAUDE.md  README.md
{{cookiecutter.project_name}}/.governance/: README.md
{{cookiecutter.project_name}}/agent_rules/: README.md
{{cookiecutter.project_name}}/constitution/: agent.md  total.md
